@@ -63,6 +63,9 @@
 
 	<LI>HTMLDOC placed the header one line too high.
 
+	<LI>When continuing a chapter onto the next page, H3 and
+	higher headings would be indented the wrong amount.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.20</H2>
